# sherlockeye-python

./: .gitignore  LICENSE  README.md  pyproject.toml
sherlockeye/: __init__.py  client.py  exceptions.py  models.py
