[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sherlockeye"
version = "0.1.0"
description = "The official Python library for Sherlockeye"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Sherlockeye", email = "contact@sherlockeye.io" }
]
keywords = ["osint", "sherlockeye", "security", "intelligence"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Topic :: Internet",
]
dependencies = [
  "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://docs.sherlockeye.io"
Documentation = "https://docs.sherlockeye.io"
Source = "https://github.com/sherlockeye/sherlockeye-python"
Issues = "https://github.com/sherlockeye/sherlockeye-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sherlockeye*"]
